# weekend-tda

./: .gitignore  .nojekyll  AGENTS.md  CLAUDE.md  _quarto.yml  index.html  intution_exercises.html  intution_exercises.ipynb  key_findings.html  pilot.html  pilot.ipynb  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: pages.yml
plans/: publish_github_pages.html  publish_github_pages.md  weekend_tda_brief.html  weekend_tda_brief.md
