[project]
name = "weekend-tda"
version = "0.1.0"
description = "Weekend calibration exercise: detecting coverage holes in CLIP embeddings via persistent homology"
requires-python = ">=3.12,<3.13"
dependencies = [
    "giotto-tda>=0.6.2",
    "matplotlib>=3.10.9",
    "open-clip-torch>=3.3.0",
    "scikit-learn>=1.3.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
