[project]
name = "weekend-tda"
version = "0.1.0"
description = "Weekend calibration exercise: detecting coverage holes in CLIP embeddings via persistent homology"
requires-python = ">=3.12,<3.13"
dependencies = [
    "giotto-tda>=0.6.2",
    "matplotlib>=3.10.9",
    "open-clip-torch>=3.3.0",
    "persim>=0.3.8",
    "ripser>=0.6.15",
    "scikit-learn>=1.3.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "umap-learn>=0.5.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyrefly>=1.0.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Defaults (E, F) + import sorting + pyupgrade. Conservative for a notebook-heavy repo.
extend-select = ["I", "UP"]

[tool.pyrefly]
# Force pyrefly (CLI and Positron's bundled extension) to resolve imports
# against the uv-managed venv instead of the system interpreter. Without this
# the bundled extension queries /usr/local/lib/python3.12/dist-packages and
# fails to find gtda, torch, etc.
python-interpreter = ".venv/bin/python"
python-version = "3.12"
